--- a/.gitignore
+++ b/.gitignore
@@ -37,10 +37,11 @@ Thumbs.db
 *.csv
 *.xlsx
 !tests/sample_data.csv
-# Benchmark datasets (allow canonical inputs while keeping other CSVs ignored)
-!benchmarks/**/input.csv
-# Ignore large expected.txt files
-benchmarks/**/expected.txt
+
+# Benchmarks (create locally as needed)
+# Keep the runner script tracked, but ignore data folders
+benchmarks/*/
+!benchmarks/*.py
 
 # Jupyter
 .ipynb_checkpoints/
