--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ pandas = "^2.3.3"
 pyyaml = "^6.0.3"
 pydantic-settings = "^2.12.0"
 sqlalchemy = "^2.0.0"
+sentence-transformers = "^2.3.0"
+torch = "^2.1.0"
 
 
 [build-system]
