--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pydantic-settings = "^2.12.0"
 sqlalchemy = "^2.0.0"
 sentence-transformers = "^2.3.0"
 torch = "^2.1.0"
+faiss-cpu = "^1.7.4"
 
 
 [build-system]
