--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ mlflow = "^3.6.0"
 pandas = "^2.3.3"
 pyyaml = "^6.0.3"
 pydantic-settings = "^2.12.0"
+openpyxl = "^3.1.5"
+fastapi = "^0.115.0"
+uvicorn = {extras = ["standard"], version = "^0.32.0"}
 
 
 [build-system]
