--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ duckdb = "^1.0.0"
 fastapi = "^0.115.0"
 uvicorn = "^0.32.0"
 requests = "^2.31.0"
+python-multipart = "^0.0.20"
 
 
 [build-system]
