--- a/datasets/default/innova/taxonomy.yaml
+++ b/datasets/default/innova/taxonomy.yaml
@@ -1,10 +1,13 @@
 client_name: Innova Care Health
 project_id: Innova_Care_Health_Jun_23
 company_context:
-  industry: "Healthcare"
-  sector: "Healthcare Services"
-  description: "Healthcare provider operating multiple facilities with focus on clinical services, patient care, and medical equipment procurement. Provides comprehensive healthcare services including clinical care, diagnostics, and facility operations."
-  business_focus: "Patient care delivery, clinical operations, medical supply chain management, and healthcare facility management"
+  industry: Healthcare
+  sector: Healthcare Services
+  description: Healthcare provider operating multiple facilities with focus on clinical
+    services, patient care, and medical equipment procurement. Provides comprehensive
+    healthcare services including clinical care, diagnostics, and facility operations.
+  business_focus: Patient care delivery, clinical operations, medical supply chain
+    management, and healthcare facility management
 max_taxonomy_depth: 4
 available_levels:
 - L1
@@ -125,3 +128,9 @@ taxonomy:
 override_rules: []
 note: Each taxonomy path is pipe-separated (L1|L2|L3|...). Select the most specific
   path you're confident about.
+taxonomy_descriptions:
+  non clinical|human resources|employee benefits|employee benefits other: Professional
+    services related to employee benefits, including tax compliance and consulting
+    services.
+  non clinical|professional services|audit and tax services: Professional services
+    related to audit and tax compliance, including consulting services.
