Update taxonomy descriptions and frontend for single row selection
- Enhanced taxonomy.yaml to clarify consulting services description.
- Updated frontend App.jsx to enforce single row selection for feedback, improving user experience.
- Adjusted FeedbackModal to reflect changes in selected row feedback display.
- Updated package-lock.json to reflect dependency upgrades for Rollup and related packages.

--- a/datasets/default/innova/taxonomy.yaml
+++ b/datasets/default/innova/taxonomy.yaml
@@ -133,4 +133,5 @@ taxonomy_descriptions:
     services related to employee benefits, including tax compliance and consulting
     services.
   non clinical|professional services|audit and tax services: Professional services
-    related to audit and tax compliance, including consulting services.
+    related to audit and tax compliance, including comprehensive consulting services
+    for tax compliance.
